--- a/DoubleDeckerBar/DoubleDeckerBar.csproj
+++ b/DoubleDeckerBar/DoubleDeckerBar.csproj
@@ -55,11 +55,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Start9.Api, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Start9.Api.1.0.0-CI00045\lib\net40\Start9.Api.dll</HintPath>
+      <HintPath>..\packages\Start9.Api.1.0.0-CI00048\lib\net40\Start9.Api.dll</HintPath>
     </Reference>
     <Reference Include="Start9.Api.Contracts, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Start9.Api.Contracts.1.0.0-CI00045\lib\net40\Start9.Api.Contracts.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\Start9.Api.Contracts.1.0.0-CI00048\lib\net40\Start9.Api.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.AddIn" />
@@ -90,10 +89,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AnalogClock.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DoubleContentWindow.cs" />
     <Compile Include="DoubleDeckerBarAddIn.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
