--- a/DoubleDeckerBar/packages.config
+++ b/DoubleDeckerBar/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Start9.Api" version="1.0.0-CI00048" targetFramework="net40" />
   <package id="Start9.Api.Contracts" version="1.0.0-CI00048" targetFramework="net40" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net40" />
 </packages>
